--- a/using-grids.html
+++ b/using-grids.html
@@ -6,8 +6,8 @@
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/common.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <!--
     Don't leave this here!
     It's only here to keep the CSS file clean
